Add msgpack-jackson3 module for Jackson 3.x support